[package]
name = "dioxus-use-request-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
regex = "1.6.0"
regex-macro = "0.2.0"
syn = "1.0.99"
